--- a/login_styles.css
+++ b/login_styles.css
@@ -35,6 +35,7 @@ button {
     border-radius: 4px;
     cursor: pointer;
     width: 100%;
+    margin-bottom: 5%;
 }
 
 button:hover {
@@ -56,3 +57,4 @@ form p {
     color: #3f51b5;
     cursor: pointer;
 }
+
