--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body { font-family: 'Arial', sans-serif; margin: 0; padding: 0; background: #fff
   .main-content { justify-content: flex-start; padding-left: calc((100vw - 768px) / 2); padding-right: calc((100vw - 768px) / 2); }
 }
 
-
+/*책 추가부분*/
 .modal {
   display: none;
   position: fixed;
