--- a/web/css/login_styles.css
+++ b/web/css/login_styles.css
@@ -18,6 +18,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    min-width: 80vh;
     background: white;
 }
 
@@ -29,19 +30,20 @@ body {
 }
 
 .wrapper {
-    width: 420px;
-    background: rgba(128, 139, 206, 0.6);
+    width: 400px;
+    background: rgba(197, 202, 233, 0.4);
     color: #fff;
     border-radius: 10px;
     padding: 20px 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-    border: 2px solid rgba(255, 222, 233, .2);
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    border: 2px solid rgba(255, 222, 233, .1);
 }
 
 .wrapper h1 {
     font-size: 30px;
     text-align: center;
     font-family: 'yangjin', sans-serif;
+    color: #333f85;
 }
 
 .wrapper .input-box {
@@ -57,15 +59,16 @@ body {
     background: transparent;
     border: none;
     outline: none;
-    border: 2px solid rgba(255, 222, 233, .2);
+    border: 2px solid rgba(92, 107, 192, .4);
     border-radius: 40px;
     font-size: 16px;
-    color: #fff;
+    color: #333f85;
     padding: 20px 45px 20px 20px;
 }
 
 .input-box input::placeholder {
-    color: #fff;
+    color: #333f85;
+    font-family: 'yangjin', sans-serif;
 }
 
 .input-box i {
@@ -74,6 +77,7 @@ body {
     top: 50%;
     transform: translateY(-50%);
     font-size: 20px;
+    color: #333f85;
 }
 
 .wrapper .btn {
@@ -99,13 +103,13 @@ body {
 
 .register-link p {
     font-family: 'yangjin', sans-serif;
-    color: #fff;
+    color: #333f85;
     text-decoration: none;
     font-weight: 300;
     font-family: 'yangjin', sans-serif;
     font-size: 16px;
-    display: inline-block; /* p 요소를 인라인 블록으로 설정하여 같은 라인에 출력되도록 함 */
-    vertical-align: middle; /* 수직 정렬을 중앙으로 설정 */
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .register-link p:hover {
@@ -114,25 +118,31 @@ body {
 
 #findPW, #showSignUp {
     font-family: 'yangjin', sans-serif;
+    color: #333f85;
+    font-size: 18px;
 }
 
 #findPW {
-    margin-right: 100px;
+    margin-right: 80px;
 }
 
 #showSignUp {
-    margin-left: 100px;
+    margin-left: 80px;
 }
 
 #signupForm p, #findForm p {
     text-align: center;
     margin-top: 20px;
     font-size: 16px;
+    color: #333f85;
+    font-family: 'yangjin', sans-serif;
 }
 
 #showLogin, #showLoginFromFind {
     font-family: 'yangjin', sans-serif;
     margin-left: 50px;
+    color: #333f85;
+    font-size: 18px;
 }
 
 #showLogin:hover, #showLoginFromFind:hover {
