--- a/PBC/styles.css
+++ b/PBC/styles.css
@@ -167,8 +167,22 @@ footer {
 
 /* 복원 버튼 스타일 */
 #restoreButton {
-    display: none; /* 초기에는 숨김 */
+    display: none; /* 초기에는 숨김 설정 */
+    position: fixed;
+    bottom: 20px; /* 하단에서 20px 위 */
+    right: 20px; /* 우측에서 20px 왼쪽 */
+    z-index: 9999; /* 다른 요소 위에 위치하도록 매우 높은 z-index */
+    width: 40px;
+    height: 40px;
+    background-color: red; /* 잘 보이도록 붉은색 배경 */
+    color: white;
+    font-size: 24px; /* 큰 글꼴 크기 */
+    line-height: 40px; /* 세로 정렬을 위한 라인 높이 */
+    text-align: center; /* 텍스트 중앙 정렬 */
+    border-radius: 20px; /* 원형 버튼 */
+    cursor: pointer; /* 클릭 가능한 요소임을 나타내는 커서 스타일 */
 }
+
 
 .settings-panel {
     position: fixed;
@@ -283,7 +297,7 @@ input:checked + .slider:before {
 
 /* 요소를 숨기는데 사용하는 클래스 */
 .hidden {
-    display: none; /* 요소를 화면에서 숨김 */
+    display: none !important; /* 숨김 설정을 강제 적용 */
 }
 
 .modal-content {
