--- a/PBCVeiw/styles.css
+++ b/PBCVeiw/styles.css
@@ -106,32 +106,28 @@ body {
     z-index: 1;
     top: 50%;
     transform: translateY(-50%);
-    padding: 0px;
+    padding: 20px;
     cursor: pointer;
     width: 50px; /* 화살표 크기를 적당히 설정 */
     height: 50px; /* 동일한 크기로 설정하여 원형을 유지 */
-    background: rgba(0, 0, 0, 0); /* 초기 배경은 완전 투명 */
-    transition: background-color 0.3s; /* 부드러운 배경색 변경 효과 */
+    background: rgba(0, 0, 0, 0.3); /* 초기 배경을 반투명 검정색으로 설정 */
     border-radius: 50%; /* 원형 모양으로 만듦 */
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-/* 마우스를 올렸을 때의 스타일 */
-.section .slidelist label:hover {
-    background-color: rgba(0, 0, 0, 0.3); /* 마우스 오버시 반투명 검정색 배경 추가 */
-    opacity: 1; /* 화살표를 보이게 함 */
+    /* 화살표 이미지가 원래 크기만큼 노출되지 않도록 크기 설정 */
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 .section .slidelist .left {
-    left: 50px; /* 화면 왼쪽 가장자리에서 적당히 떨어진 위치 */
-    background: url('./img/left.png') center center / contain no-repeat;
+    left: 10px; /* 화면 왼쪽 가장자리에서 적당히 떨어진 위치 */
+    background-image: url('./img/left.png'); /* 좌측 화살표 이미지 설정 */
 }
 
 .section .slidelist .right {
-    right: 50px; /* 화면 오른쪽 가장자리에서 적당히 떨어진 위치 */
-    background: url('./img/right.png') center center / contain no-repeat;
+    right: 10px; /* 화면 오른쪽 가장자리에서 적당히 떨어진 위치 */
+    background-image: url('./img/right.png'); /* 우측 화살표 이미지 설정 */
 }
 
 /* INPUT이 체크되면 변화값이 li까지 전달되는 스타일 */
@@ -254,10 +250,11 @@ button {
 
 /* 자막 스타일 추가 */
 .subtitle {
+    border: 2px solid black;
     position: absolute;
     bottom: 10px; /* 하단에서 약간 위로 띄움 */
     padding: 5px 10px;
-    background: rgba(0, 0, 0, 0.2); /* 반투명 배경 */
+    background: rgba(255, 255, 255, 1); /* 반투명 배경 */
     color: black; /* 글자 색상 */
     font-size: 1rem;
     text-align: center;
